# symbiosis-brain

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: install-smoke-checklist.md
hooks/: README.md  brain-pre-action-trigger.sh  brain-save-trigger.py  brain-save-trigger.sh  brain-session-start.py  brain-session-start.sh  brain-sync.sh  sb-base-statusline.sh  sb-line.sh  sb-statusline.sh  statusline.sh
scripts/: install_statusline.py  migrate_claude_md_markers.py  uninstall_statusline.py  w4_migrate_type_drift.py  w4_rewrite_title_links.py
templates/: claude-md-block.md  scope-taxonomy-minimal.md  vault-readme.md
tests/: conftest.py  test-brain-session-start.sh  test-pre-action-trigger.sh  test-prompt-check-hook.sh  test-sb-statusline.sh  test-stop-hook.sh  test_atomic_write.py  test_bash_filter.py  test_brain_save_trigger_py.py  test_brain_save_trigger_routing.py  test_brain_session_start_py.py  test_cli_search_gist.py  test_concurrency.py  test_graph.py  test_improvements.py  test_install_cli_doctor.py  test_install_cli_migrate_hooks.py  test_install_cli_setup.py  test_install_cli_uninstall.py  test_install_lib.py  test_install_statusline.py  test_integration.py  test_lint.py  test_main_prewarm.py  test_markdown_parser.py  test_migrate_claude_md_markers.py  test_onboard_lock.py  test_packaging.sh  test_parent_watchdog.py  test_pre_action_config.py  test_pre_action_recall.py  test_recall_dedup.py  test_refactor.py  test_resolver.py  test_rotation.py  test_rotation_integration.py  test_scope_cli.py  test_scope_resolver.py  test_scopes.py  (+22 more)
(+44 files in other folders)
